Fix single event description alignment

--- a/timeline/app/src/css/styles.css
+++ b/timeline/app/src/css/styles.css
@@ -1227,6 +1227,7 @@ footer .copyright {
 }
 
 .timeline-content .timeline-event .event-description {
+  width: 100%;
   font-size: 1.15em;
 }
 
