--- a/timeline/app/src/sass/main.scss
+++ b/timeline/app/src/sass/main.scss
@@ -634,6 +634,7 @@ Timeline components
         }
 
         .event-description {
+            width: 100%;
             font-size: 1.15em;
         }
 
